Bugfix update - Alert box and adjust spacing per slide

--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,9 @@ body .home-main {
     height: 100%;
   }
 }
+body .home-main .alert {
+  height: auto;
+}
 body .home-main .action-container {
   padding: 0 15px;
 }
@@ -272,6 +275,9 @@ body .home-main .action {
   }
 }
 body .home-main .action .action-wrapper {
+  height: auto;
+}
+body .home-main .action .action-wrapper div {
   height: auto;
 }
 body .home-main .action .action-wrapper h1, body .home-main .action .action-wrapper h2 {
@@ -465,11 +471,11 @@ body .home-main .hand {
   margin-right: -15px;
 }
 body .home-main .hand .phone {
-  height: 184px;
+  height: 200px;
   width: 157px;
   position: absolute;
   background-color: transparent;
-  bottom: 209px;
+  bottom: 195px;
   left: 66px;
   z-index: 3;
 }
@@ -496,50 +502,50 @@ body .home-main .hand .phone .slick-prev {
 }
 @media screen and (min-width: 1200px) {
   body .home-main .hand .phone {
-    bottom: 238px;
+    bottom: 218px;
     left: 75px;
-    height: 209px;
+    height: 229px;
     width: 179px;
   }
 }
 @media screen and (min-width: 1367px) and (min-height: 769px) {
   body .home-main .hand .phone {
-    height: 272px;
+    height: 297px;
     width: 233px;
-    bottom: 311px;
-    left: 98px;
+    bottom: 289px;
+    left: 99px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
   body .home-main .hand .phone {
-    height: 169px;
+    height: 186px;
     width: 146px;
-    bottom: 195px;
+    bottom: 181px;
     left: 61px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) and (orientation: portrait) {
   body .home-main .hand .phone {
-    height: 222px;
+    height: 244px;
     width: 191px;
-    bottom: 254px;
+    bottom: 235px;
     left: 80px;
   }
 }
 @media screen and (max-width: 767px) {
   body .home-main .hand .phone {
-    bottom: 209px;
+    bottom: 192px;
     left: 50%;
     margin-left: -80px;
-    height: 180px;
+    height: 199px;
     width: 156px;
   }
 }
 @media screen and (height: 768px) and (width: 1024px) {
   body .home-main .hand .phone {
-    height: 203px;
+    height: 218px;
     width: 171px;
-    bottom: 224px;
+    bottom: 212px;
     left: 72px;
   }
 }
